[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Code/HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Hud/Hud_01.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Roboto-Black.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Sprites/Hud/winoverlay.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Player0/idle/Player0Idle1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Player0/idle/Player0Idle2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Player0/idle/Player0Idle3.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Player0/idle/Player0Idle4.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Player0/idle/Player0Idle5.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Player1B/idle/Player1Idle1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Player1B/idle/Player1Idle2.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/Player1B/idle/Player1Idle3.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/Player1B/idle/Player1Idle4.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/Player1B/idle/Player1Idle5.png" type="Texture" id=14]
[ext_resource path="res://Scenes/Title/Buttons/magic_36.tres" type="DynamicFont" id=15]


[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 2
font_data = ExtResource( 3 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Frame" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Scorebox_P1" type="MarginContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 150.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1_Score" type="Label" parent="Scorebox_P1"]
margin_right = 130.0
margin_bottom = 40.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.4, 0.4, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Player 1"
align = 1
valign = 1

[node name="Scorebox_P2" type="MarginContainer" parent="."]
margin_left = 874.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P2_Score" type="Label" parent="Scorebox_P2"]
margin_right = 130.0
margin_bottom = 40.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Player 2"
align = 1
valign = 1

[node name="Winbox" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 573.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Win_Overlay" type="Sprite" parent="Winbox"]
texture = ExtResource( 4 )
centered = false

[node name="Winner" type="CenterContainer" parent="Winbox"]
margin_right = 1024.0
margin_bottom = 573.0

[node name="P0" type="AnimatedSprite" parent="Winbox/Winner"]
position = Vector2( 512.014, 350 )
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "idle"
frame = 4
playing = true

[node name="P1" type="AnimatedSprite" parent="Winbox/Winner"]
position = Vector2( 512, 350 )
scale = Vector2( 3, 3 )
frames = SubResource( 2 )
animation = "idle"
playing = true

[node name="Win_Message_Box" type="CenterContainer" parent="Winbox"]
margin_right = 1024.0
margin_bottom = 573.0
grow_horizontal = 0
grow_vertical = 0

[node name="Win_Message" type="Label" parent="Winbox/Win_Message_Box"]
margin_left = 378.0
margin_top = 268.0
margin_right = 646.0
margin_bottom = 304.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "WINMESSAGE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
